Using Dagger 2 for injection and AutoValue for generating pojos